Changed button colors, added in images and personal info.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -110,10 +110,8 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="feature-text">
-                    <h3>Love</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                        Consonantia,
-                        there live the blind texts.</p>
+                    <h3>Our Vision</h3>
+                    <p>Create climate smart solutions to nutrient and assisting the community to produce better in with the locally available resources  </p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -142,9 +140,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-                <h3>Our Gallery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-                    perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+                <h3>Statement of Need</h3>
+                <p>We know that more than 50% of the rural population in Zimbabwe is affected by food insecurity.
+There is a serious lack of balanced diet where up to 75% cannot consume protein regularly.
+We also know that there is a rapid increase in child malnutrition and stunted growth as well as wasting.  </p>
             </div>
         </div>
         <div class="row row-bottom-padded-md">
@@ -219,12 +218,12 @@
             <div class="col-md-4">
                 <div class="fh5co-team text-center animate-box">
                     <figure>
-                        <img src="images/person_1.jpg" alt="user">
+                        <img src="{% static 'webapp/images/esnath-divasoni-cropped.webp' %}" alt="user">
                     </figure>
 
                     <div>
                         <h3>Esnath Divasoni</h3>
-                        <p><span>Founder</span></p>
+                        <p><span>Executive Director & Founder</span></p>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and
                             Consonantia, there live the blind texts. Far far away, behind the word
                             mountains,
@@ -241,12 +240,12 @@
             <div class="col-md-4">
                 <div class="fh5co-team text-center animate-box">
                     <figure>
-                        <img src="{% static 'webapp/images/children-esnath-bin.jpg' %}"
+                        <img src="{% static 'webapp/images/lameck-marondera.webp' %}"
                              alt="Children in Community">
                     </figure>
                     <div>
                         <h3>Mr. Lameck Marondera</h3>
-                        <p><span>Founder</span></p>
+                        <p><span>Director</span></p>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and
                             Consonantia, there live the blind texts. Far far away, behind the word
                             mountains,
