--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -1,16 +1,48 @@
 {% extends 'base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>{% block head %}{%  endblock head %}
+<head>
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Jumping Protein</title>
+    <meta name="title" content="Jumping Protein">
+    <meta name="description"
+          content="Jumping protein is a division of the Glorified Community Empowerment Trust. We have a vision of an economically limitless Africa. ">
+    <meta name="keywords"
+          content="Sustainability, farming, protein, hunger, climate, poverty, economy, business, education, empowerment, Basic needs, Development">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Esnath Divasoni">
+    <link rel="manifest" href="{% static 'jumpingprotein/manifest.webmanifest' %}">
+    <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
+    <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
+    <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+    <script type="text/javascript">
+        var bodyCacheable = true;
+
+        var exclusionReason =
+            {"shouldRender": true, "forced": false};
+        var ssrInfo = {"renderBodyTime": 327}
+
+    </script>
+
+    <!--[if IE 6]>
+    <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->{% block head %}{%  endblock head %}
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About Us</title>
 
 </head>
 <body>
-{% block navbar %}
+{% block content %}
 
-{% endblock navbar %}
-
+{% endblock content %}
 
 
 </body>
