--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -75,9 +75,7 @@
             <h2>Jumping Protein</h2>
             <span class="byline">A division of the Glorified Community Empowerment Trust</span>
         </div>
-        <ul class="actions">
-            <li><a href="#" class="button">Contact Us</a></li>
-        </ul>
+
     </div>
 </div>
 
@@ -111,7 +109,8 @@
             <div class="col-md-4">
                 <div class="feature-text">
                     <h3>Our Vision</h3>
-                    <p>Create climate smart solutions to nutrient and assisting the community to produce better in with the locally available resources  </p>
+                    <p>Create climate smart solutions to nutrient and assisting the community to produce better in with
+                        the locally available resources </p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -142,8 +141,9 @@
             <div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
                 <h3>Statement of Need</h3>
                 <p>We know that more than 50% of the rural population in Zimbabwe is affected by food insecurity.
-There is a serious lack of balanced diet where up to 75% cannot consume protein regularly.
-We also know that there is a rapid increase in child malnutrition and stunted growth as well as wasting.  </p>
+                    There is a serious lack of balanced diet where up to 75% cannot consume protein regularly.
+                    We also know that there is a rapid increase in child malnutrition and stunted growth as well as
+                    wasting. </p>
             </div>
         </div>
         <div class="row row-bottom-padded-md">
