--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load static %}
 {% load custom_blog_tags %}
 {% block title %}{{ post.title|safe }}{% endblock %}
 
