--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,8 @@
 {% extends "blog/base.html" %}
+{% load static %}
 {% block title %}Our Blog{% endblock %}
+
+<div class="container"
 {% block content %}
 
 
