--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="#" class="active">Home</a></li>
+                        <li><a href="{% url 'index' %}" class="active">Home</a></li>
                         <li><a href="{% url 'about' %}">About Us</a></li>
                         <li><a href="{% url 'blog:post_list' %}">Blog</a></li>
                         <li><a href="#">Gallery</a></li>
