--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,21 +2,28 @@
 {% load static %}
 {% block title %}Our Blog{% endblock %}
 
-<div class="container"
+<div class="container"></div>
 {% block content %}
 
 
-<h1>Our Blog</h1>
-{% for post in posts %}
-<h2>
-    <a href="{{ post.get_absolute_url }}">
-        {{ post.title|safe }}
-    </a>
-</h2>
-<p class="date">
-    Published {{ post.publish }} by {{ post.author }}
-</p>
-{{ post.body|safe|truncatewords:30|linebreaks }}
-{% endfor %}
+    <h1>Our Blog</h1>
+    {% for post in posts %}
+        <div class="container">
+            <div class="mt-3">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title"><a
+                                href="{{ post.get_absolute_url }}"><a href="{{ post.title|safe }}">{{ post.slug }}</a>
+                        </h2></div>
+                    <p class="card-text">{{ post.body|safe|truncatewords:30|linebreaks }}</p>
+                    <p class="card-text"><small class="text-muted">Published {{ post.publish }}
+                        by {{ post.author }}</small></p>
+                </div>
+            </div>
+        </div>
+
+
+
+    {% endfor %}
     {% include "blog/pagination.html" with page=posts %}
 {% endblock %}
