--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Jumping Protein</title>
     <meta name="title" content="Jumping Protein">
     <meta name="description"
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
+    <link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
@@ -34,16 +36,109 @@
     </script>
 
     <!--[if IE 6]>
-    <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->{% block head %}{%  endblock head %}
+    <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->{% block head %}{% endblock head %}
     <meta charset="UTF-8">
     <title>About Us</title>
 
 </head>
-<body>
+
 {% block content %}
 
+    <head>
+        <meta charset="utf-8">
+        <title>About Us</title>
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta content="Webflow" name="generator">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+        <script type="text/javascript">WebFont.load({google: {families: ["Droid Sans:400,700"]}});</script>
+        <!-- [if lt IE 9]>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"
+                type="text/javascript"></script><![endif] -->
+        <script type="text/javascript">!function (o, c) {
+            var n = c.documentElement, t = " w-mod-";
+            n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+        }(window, document);</script>
+        <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="images/webclip.png" rel="apple-touch-icon">
+    </head>
+    <body>
+    <div class="w-container">
+        <div class="w-row">
+            <div class="w-col w-col-9">
+                <h1>About Us</h1>
+                <p class="paragraph"><strong class="bold-text">Glorified Community Empowerment Trust (GCET) is an
+                    organisation found on values of economic empowerment through servant leadership and volunteerism.It
+                    is run by and for the marginalized communities.  Through own capital, appeals, grants and loans,
+                    capitalized economic ventures will improve the standard of living and create a positive change. GCET
+                    has a pool of expert consultants whose mission is poverty alleviation achieved by tailor-making
+                    community solutions to end poverty of all forms. </strong></p>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+                        diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut
+                        sem vitae risus tristique posuere.</p>
+                </div>
+            </div>
+            <div class="w-col w-col-3">
+                <h4></h4>
+                <ul role="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <div class="w-richtext">
+                <h2>Statement of Need</h2>
+                <p>Ourmarginal societies suffer from innate poverty. Orphans and vulnerablechildren, persons with a
+                    disability, widows, the elderly and alsoyoung rural women are the hardest hit. These individuals and
+                    groupslive on less than a dollar a day. </p>
+                <p>Thereare massive food shortages in the communities. They are deprived froma decent meal hence prone
+                    to malnutrition diseases. Most of them liveon two light meals per day to keep them alive. A balanced
+                    diet inthis context is usually a nightmare. For those in elderly homes andorphanages food supply is
+                    a great challenge. Most communities havelittle to none good floors of income to sustain them hence
+                    the needto establish some projects.</p>
+                <p>Educationis a cornerstone to human kind however poverty has denied our belovedcommunities. Most
+                    marginalised communities are not able to attendschool due to lack of incomes to meet the school fees
+                    demand. A highrate of dropouts is experienced. A majority of these will contributeto a low literacy
+                    rate and create vulnerable communities. </p>
+                <p>Themajority of the population in context has no decent shelter. It isusually a situation of
+                    overpopulation or exposure to harsh weatherand failure to afford basic utilities. These need a good
+                    income andsome projects would be best suited a lasting solution.</p>
+                <p>Medicalbills have posed a life threatening situation. In the face of thepandemics the poor cannot
+                    survive the costs even the medical subsidycannot reach far to them. HIV/AIDS, malaria corona virus
+                    and cancerto name a few have robed our loved ones due to poverty. </p>
+                <p>Throughincome generating projects at both individual and institutionallevels more income can be
+                    generated to sustain a life. Communitieshave either tried and gave up or contemplated starting
+                    incomegenerating projects to address their basic needs. GCET is there tobridge the knowledge gap and
+                    empower communities throughentrepreneurship. Projects will be from all sectors of the economywith a
+                    major thrust in agriculture.</p>
+                <p>‍</p>
+                <h4>Static and dynamic content editing</h4>
+                <p>A rich text element can be used with static or dynamic content. For static content, just drop it into
+                    any page and begin editing. For dynamic content, add a rich text field to any collection and then
+                    connect a rich text element to that field in the settings panel. Voila!</p>
+                <h4>How to customize formatting for each rich text</h4>
+                <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a
+                    class is added to the rich text element using the &quot;When inside of&quot; nested selector
+                    system.</p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="w-container"></div>
+    </div>
+    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606f90ec766df03b34fb30bd"
+            type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="js/webflow.js" type="text/javascript"></script>
+    <!-- [if lte IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+    </body>
+    </html>
 {% endblock content %}
 
 
-</body>
 </html>
