--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-    color: #00abff;
+    color: #244719;
     text-decoration: none;
 }
 
@@ -28,14 +28,14 @@ h2 {
 
 #sidebar {
     float: right;
-    width: 30%;
+    width: 25%;
     padding: 10px;
     background: #efefef;
     height: 100%;
 }
 
 p.date {
-    color: #414741;
+    color: #414741; !important;
     font-family: georgia, serif;
     font-size: 12px;
     font-style: italic;
