--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,8 +4,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
 
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
@@ -51,6 +51,7 @@
 </div>
 
 <div id="sidebar">
+    <div class="text-dark">
     <h2>Our Blog</h2>
     <p>The latest {% total_posts %} posts published so far in this blog.</p>
     <h3>Latest Posts</h3>
@@ -58,6 +59,7 @@
     <p><a href="{% url "blog:post_feed" %}" title="Subscribe to my RSS feed">RSS feed</a></p>
     <p>Here we detail events and activities surrounding our organization.</p>
 </div>
+    </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
