--- a/blog/templates/blog/latest_posts.html
+++ b/blog/templates/blog/latest_posts.html
@@ -1,7 +1,12 @@
 <ul>
+
     {% for post in latest_posts %}
+        <div class="row-bottom-padded-lg text-dark">
+        <ul>
             <li>
                 <a href="{{ post.get_absolute_url|safe }}">{{ post.title|safe }}</a>
             </li>
+            </ul>
+        </div>
     {% endfor %}
 </ul>
