--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,9 +4,20 @@
 {% block title %}{{ post.title|safe }}{% endblock %}
 
 {% block content %}
- <h1>{{ post.title|safe }}</h1>
- <p class="date">
-   Published {{ post.publish }} by {{ post.author }} | {{ post.body|read_time }}
- </p>
- {{ post.body|safe|linebreaks }}
+    <div class="container">
+        <div class="row">
+            <div class="coll-md-8 card mb-4 mt-3 left top">
+                <div class="card-body fa-font-awesome">
+                    <h1>{{ post.title|safe }}</h1>
+                    <p class="text text-muted">
+                        Published {{ post.publish }} by {{ post.author }} | {{ post.body|read_time }}
+                    </p>
+                    <p class="card-text">
+                        {{ post.body|safe|linebreaks }}
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
