--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Open Sans", Arial, sans-serif;
     line-height: 1.6;
     font-size: 16px;
-    background: #fff;
+    background: #fdfdfd;
     color: #848484;
     font-weight: 300;
     overflow-x: hidden;
@@ -637,6 +637,7 @@ figure {
 
 /*********** About ***********/
 .bg {
+    font-family: "Open Sans", Arial, sans-serif;
     position: fixed;
     width: 100%;
     height: 300%;
@@ -646,11 +647,12 @@ figure {
 
 section {
     color: #000000;
-    font-family: arial;
-    width: 500px;
-    margin: auto;
-    line-height: 20px;
-    font-size: 16px;
+    font-family: "Open Sans", Arial, sans-serif;
+    width: 900px;
+    margin: 0 auto;
+    line-height: 30px;
+    font-size: 1.25rem;
+    -moz-column-width: auto;
 }
 
 
